src/objects/Animal__c.object
<CustomObject>
    <fields>
        <fullName>Animal_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Animal Template</label>
        <referenceTo>Animal_Template__c</referenceTo>
        <relationshipLabel>Animals</relationshipLabel>
        <relationshipName>Animals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zoo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zoo</label>
        <referenceTo>Zoo__c</referenceTo>
        <relationshipLabel>Animals</relationshipLabel>
        <relationshipName>Animals</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Animal</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Animal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Animals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>